cmake_minimum_required(VERSION 3.6)
project(lab5)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Codes/FSS/FSS.cpp
    Codes/FSS/FSS.h
    Codes/FSS/main.cpp
    Codes/FSSB/FSSB.cpp
    Codes/FSSB/FSSB.h
    Codes/FSSB/main.cpp
    Codes/FSSNW/FSSNW.cpp
    Codes/FSSNW/FSSNW.h
    Codes/FSSNW/main.cpp
    Codes/TaillardDataSets/1.txt
    Codes/TaillardDataSets/10.txt
    Codes/TaillardDataSets/100.txt
    Codes/TaillardDataSets/101.txt
    Codes/TaillardDataSets/102.txt
    Codes/TaillardDataSets/103.txt
    Codes/TaillardDataSets/104.txt
    Codes/TaillardDataSets/105.txt
    Codes/TaillardDataSets/106.txt
    Codes/TaillardDataSets/107.txt
    Codes/TaillardDataSets/108.txt
    Codes/TaillardDataSets/109.txt
    Codes/TaillardDataSets/11.txt
    Codes/TaillardDataSets/110.txt
    Codes/TaillardDataSets/111.txt
    Codes/TaillardDataSets/112.txt
    Codes/TaillardDataSets/113.txt
    Codes/TaillardDataSets/114.txt
    Codes/TaillardDataSets/115.txt
    Codes/TaillardDataSets/116.txt
    Codes/TaillardDataSets/117.txt
    Codes/TaillardDataSets/118.txt
    Codes/TaillardDataSets/119.txt
    Codes/TaillardDataSets/12.txt
    Codes/TaillardDataSets/120.txt
    Codes/TaillardDataSets/13.txt
    Codes/TaillardDataSets/14.txt
    Codes/TaillardDataSets/15.txt
    Codes/TaillardDataSets/16.txt
    Codes/TaillardDataSets/17.txt
    Codes/TaillardDataSets/18.txt
    Codes/TaillardDataSets/19.txt
    Codes/TaillardDataSets/2.txt
    Codes/TaillardDataSets/20.txt
    Codes/TaillardDataSets/21.txt
    Codes/TaillardDataSets/22.txt
    Codes/TaillardDataSets/23.txt
    Codes/TaillardDataSets/24.txt
    Codes/TaillardDataSets/25.txt
    Codes/TaillardDataSets/26.txt
    Codes/TaillardDataSets/27.txt
    Codes/TaillardDataSets/28.txt
    Codes/TaillardDataSets/29.txt
    Codes/TaillardDataSets/3.txt
    Codes/TaillardDataSets/30.txt
    Codes/TaillardDataSets/31.txt
    Codes/TaillardDataSets/32.txt
    Codes/TaillardDataSets/33.txt
    Codes/TaillardDataSets/34.txt
    Codes/TaillardDataSets/35.txt
    Codes/TaillardDataSets/36.txt
    Codes/TaillardDataSets/37.txt
    Codes/TaillardDataSets/38.txt
    Codes/TaillardDataSets/39.txt
    Codes/TaillardDataSets/4.txt
    Codes/TaillardDataSets/40.txt
    Codes/TaillardDataSets/41.txt
    Codes/TaillardDataSets/42.txt
    Codes/TaillardDataSets/43.txt
    Codes/TaillardDataSets/44.txt
    Codes/TaillardDataSets/45.txt
    Codes/TaillardDataSets/46.txt
    Codes/TaillardDataSets/47.txt
    Codes/TaillardDataSets/48.txt
    Codes/TaillardDataSets/49.txt
    Codes/TaillardDataSets/5.txt
    Codes/TaillardDataSets/50.txt
    Codes/TaillardDataSets/51.txt
    Codes/TaillardDataSets/52.txt
    Codes/TaillardDataSets/53.txt
    Codes/TaillardDataSets/54.txt
    Codes/TaillardDataSets/55.txt
    Codes/TaillardDataSets/56.txt
    Codes/TaillardDataSets/57.txt
    Codes/TaillardDataSets/58.txt
    Codes/TaillardDataSets/59.txt
    Codes/TaillardDataSets/6.txt
    Codes/TaillardDataSets/60.txt
    Codes/TaillardDataSets/61.txt
    Codes/TaillardDataSets/62.txt
    Codes/TaillardDataSets/63.txt
    Codes/TaillardDataSets/64.txt
    Codes/TaillardDataSets/65.txt
    Codes/TaillardDataSets/66.txt
    Codes/TaillardDataSets/67.txt
    Codes/TaillardDataSets/68.txt
    Codes/TaillardDataSets/69.txt
    Codes/TaillardDataSets/7.txt
    Codes/TaillardDataSets/70.txt
    Codes/TaillardDataSets/71.txt
    Codes/TaillardDataSets/72.txt
    Codes/TaillardDataSets/73.txt
    Codes/TaillardDataSets/74.txt
    Codes/TaillardDataSets/75.txt
    Codes/TaillardDataSets/76.txt
    Codes/TaillardDataSets/77.txt
    Codes/TaillardDataSets/78.txt
    Codes/TaillardDataSets/79.txt
    Codes/TaillardDataSets/8.txt
    Codes/TaillardDataSets/80.txt
    Codes/TaillardDataSets/81.txt
    Codes/TaillardDataSets/82.txt
    Codes/TaillardDataSets/83.txt
    Codes/TaillardDataSets/84.txt
    Codes/TaillardDataSets/85.txt
    Codes/TaillardDataSets/86.txt
    Codes/TaillardDataSets/87.txt
    Codes/TaillardDataSets/88.txt
    Codes/TaillardDataSets/89.txt
    Codes/TaillardDataSets/9.txt
    Codes/TaillardDataSets/90.txt
    Codes/TaillardDataSets/91.txt
    Codes/TaillardDataSets/92.txt
    Codes/TaillardDataSets/93.txt
    Codes/TaillardDataSets/94.txt
    Codes/TaillardDataSets/95.txt
    Codes/TaillardDataSets/96.txt
    Codes/TaillardDataSets/97.txt
    Codes/TaillardDataSets/98.txt
    Codes/TaillardDataSets/99.txt)

add_executable(lab5 ${SOURCE_FILES})